--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -46,11 +46,36 @@ jobs:
     if: github.actor != 'dependabot[bot]' && github.event_name != 'merge_group'
     name: Sonar
     needs: [ enhetstest, integrasjonstest ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/sonar.yaml@main # ratchet:exclude
-    with:
-      unit-test-artifact-name: 'enhetstest'
-      unit-test-artifact-path: 'coverage/enhetstest'
-      integration-test-artifact-name: 'integrasjonstest'
-      integration-test-artifact-path: 'coverage/integrasjonstest'
-    secrets: inherit
-
+    runs-on: ${{ inputs.runs-on }}
+    steps:
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # ratchet:actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup java and maven
+        uses: navikt/familie-baks-gha-workflows/.github/actions/setup-java-maven@main # ratchet:exclude
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          java-version: ${{ inputs.java-version }}
+      - name: Download unit test report artifact
+        uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # ratchet:actions/download-artifact@v4
+        with:
+          name: 'enhetstest'
+          path: 'coverage/enhetstest'
+      - name: Download integration test report artifact
+        uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # ratchet:actions/download-artifact@v4
+        with:
+          name: 'integrasjonstest'
+          path: 'coverage/integrasjonstest'
+      - name: Cache Sonar packages
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # ratchet:actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Sonar
+        env:
+          MAVEN_OPTS: "-Xmx4g -Dmaven.artifact.threads=10"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn sonar:sonar -Dsonar.coverage.jacoco.xmlReportPaths="coverage/enhetstest/jacoco.xml,coverage/integrasjonstest/jacoco.xml"
